2015-10-13  Charlie Zender  <zender@uci.edu>

	* Use lat_nm_out,lon_nm_out instead of "lat","lon" in cell_methods

2015-10-12  Charlie Zender  <zender@uci.edu>

	* Add infrastructure for non-MRV regridding

2015-10-11  Charlie Zender  <zender@uci.edu>

	* Fix lvl_nbr for 1D output grids (underestimated lvl_nbr by factor of last non-spatial dimension)

	* Allow non-MRV variables to be defined in output and sent to regridding

	* NCO 4.5.3-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.3-alpha07 final changes';git push
	git tag -a 4.5.3-alpha07 -m 'Version 4.5.3-alpha07 tag:	lat/lon/col_nm_in/out, min/max_index(), ';git push --tags

	* Disambiguate lat/lon/col_nm into lat/lon/col_nm_in, lat/lon/col_nm_out (so regridded output need not use, e.g., GeoTrack as name)

2015-10-11  Henry Butowsky  <henryb@hush.com>

	* First cut methods min_index() & max_index() return indices in variable min or max attribute

2015-10-10  Charlie Zender  <zender@uci.edu>

	* Warn in all situations when horizontal spatial dimensions are	not last dimensions of input file

2015-10-09  Charlie Zender  <zender@uci.edu>

	* Hard-code AIRS L2 dimension names: Geo[X]Track:L2_Standard_atmospheric&surface_product

	* Hard-code AIRS L3 dimension names: [XY]Dim:location

	* Fix new logic bug in nco_grd_nfr()

2015-10-05  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.3-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.3-alpha06 final changes';git push
	git tag -a 4.5.3-alpha06 -m 'Version 4.5.3-alpha06 tag: curvilinear regridding';git push --tags

	* Regridded WRF looks OK---range and location are good. Still need precise evaluation.

	* Wow, curvilinear grids now actually run, though flg_grd_out_crv only reaches half-way to the end of nco_rgr_map()

	* Introduce flg_grd_out_crv in nco_rgr_map()

	* Update maps to 20150901 versions in NCO regression tests, everything passes on dust

2015-10-04  Charlie Zender  <zender@uci.edu>
